--- a/index.qmd
+++ b/index.qmd
@@ -6,8 +6,6 @@ title: Welcome!
 
 <!-- ## Welcome! {.unnumbered .unlisted} -->
 
-CSCI 0451: Machine Learning is an advanced elective at Middlebury College on the topic of algorithms that learn patterns from data. Artificial intelligence, predictive analytics, computational science, pattern recognition, signal processing, and data science are all disciplines that draw heavily on techniques from machine learning.
-
-You can access this page using `go/cs-451`.  
+CSCI 0200: Math Foundations is a cool thing!
 
 
