--- a/index.qmd
+++ b/index.qmd
@@ -10,4 +10,5 @@ CSCI 0200: Math Foundations is a cool thing! This is the course for the fall.
 
 This is another test.
 
-Can I trigger a new workflow this way?
+
+I just saved some workflow configs...
