--- a/index.qmd
+++ b/index.qmd
@@ -10,5 +10,5 @@ CSCI 0200: Math Foundations is a cool thing! This is the course for the fall.
 
 This is another test.
 
+Pipeline is working now??
 
-I just saved some workflow configs...
