--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ numbered: false
 title: Welcome! 
 ---
 
-<!-- ## Welcome! {.unnumbered .unlisted} -->
 
-CSCI 0200: Math Foundations is a cool thing! This is the course for the fall. 
+Welcome to CSCI 0200: Math Foundations of Computer Science! In this course, we'll learn to the fundamentals of mathematical reasoning about data structures and algorithms. We'll learn how to address questions like: 
 
-This is another test.
+- How many possibilities does a search algorithm need to weed through in order to find the best solution to a problem?
+- How do we *know* that a certain algorithm works? How do we *know* how fast it is? 
+- What role do uncertainty and randomness play in computation? 
 
-Pipeline is working now??
 
