--- a/schedule.qmd
+++ b/schedule.qmd
@@ -2,26 +2,20 @@
 listing: 
   id: schedule
   contents: schedule.yml
-  template: schedule.ejs
+  template: assets/ejs/schedule.ejs
 toc: false
 title: Schedule
 --- 
-  
-- Readings in normal font should be completed and annotated ahead of lecture. 
-- *Readings in italic provide optional additional depth on the material.*   
-- **Assignments** are listed on the day when I suggest you begin working on them.        
+
+*This schedule is tentative and subject to change*.  
+
+Warmups are due **every class day**, even if they are not listed under the "Due" column. 
+
  
 :::{#schedule}
 :::
 
-## Finals Period 
-
-During the reading and final exam period, you'll meet with me 1-1 for about 15 minutes. The purpose of this meeting is to help us both reflect on your time in the course and agree on a final grade. 
-
-## Due Dates
-
-It's best to submit all work that you wish to demonstrate your learning by the time of our final meeting. However, I will accept and assess work submitted by the last day of the final exam period. 
-
+## Final Exam 
  
+Our final exam will be another quiz covering all twelve core Learning Targets. So, it's just like Quiz 4, except you'll have 3 hours instead of 50 minutes.     
   
-   
