--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -14,6 +14,9 @@ Welcome to CSCI 0200: Math Foundations of Computing! In this course, we'll study
     - Example questions: Does the MergeSort algorithm correctly sort a list *all the time*? Does it work in $O(n \log n)$ time? *How do you know*? 
 3. Mathematics is used in a wide range of **computational applications**, including graphics, image processing, simulation, and machine learning.  
 
+# Learning Objectives
+
+
 
 
 # Logistics and Key Highlights
@@ -105,10 +108,7 @@ CSCI 0200 is a *flipped classroom*. This means that our scheduled class periods 
 - On **Mondays** and **Wednesdays**, you will watch videos, complete readings, and do warmup problems *before class*. In class, we'll discuss some of your questions from the warmups and work together on practice problems. 
 - On **Fridays**, you will watch videos, complete readings, and do warmup problems *before class*. During class, you'll work in groups on Lab assignments. You'll complete the Lab assignments outside of class and turn them in. 
 
-
-
 ## Course Activities
-
 
 The overall format of CSCI 0200 is designed to help you apply the ideas and skills of the course to progressively higher stages of *Bloom's taxonomy of cognition*. 
 
@@ -137,6 +137,46 @@ On quizzes, you'll demonstrate your ability to <span style="color:#7030a0">**rem
 Once you have earned *Satisfactory* on a learning target, **you do not need to attempt that target again.** You're done with that one! On the next quiz, you should attempt a different learning target.
 
 Our final exam will include one question for every learning target in the course, similarly to the last. This gives you a chance to earn *Satisfactory* on learning targets for anything you might not yet have gotten by the final quiz.    
+
+#### Learning Targets for Quizzes
+
+[Targets **LS1-3** are introduced on Quiz 1. Targets **PF1**, **PF2**, and **FR1** are introduced on Quiz 2. Targets **CR1-3** are introduced on Quiz 3. Targets **G1**, **P1**, and **P2** are introduced on Quiz 4.]{.aside}
+
+**Logic and Sets **
+
+- **LS1**: I can simplify and evaluate logical expressions that include quantifiers and boolean operations. 
+- **LS2**: I can represent sets in set-builder notation; determine whether an object is an element of a set; and prove that one set is equal to or a subset of another. 
+- **LS3**: I can perform operations on sets (intersection, union, complement, difference, Cartesian product) and determine the cardinality of a set. 
+
+**Proofs **
+
+- **PF1**: I can use proof-by-contradiction to prove mathematical statements. 
+- **PF2**: I can choose between weak and strong induction and write correct inductive proofs that include both a base case and an inductive step. 
+
+**Functions and Relations**
+
+- **FR1**: I can determine whether or not a given relation is an equivalence relation. 
+
+**Counting and Recursion**
+
+- **CR1**: I can use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
+- **CR2**: I can use permutations and combinations to count the number of candidate solutions to a given problem. 
+- **CR3**: I can prove that a recurrence relation describes a simple algorithm's runtime and use this relation to determine the big-oh asymptotic runtime. 
+
+**Graphs**
+
+- **G1**: I can write correct proofs of simple mathematical propositions about the structure of graphs. 
+
+**Probability**
+
+- **P1**: I can evaluate marginal, joint, and conditional probabilities of events on discrete sample spaces. 
+- **P2**: I can evaluate expectations and conditional expectations of random variables on discrete sample spaces. 
+
+
+
+
+
+
 
 ### Labs
 
@@ -398,3 +438,7 @@ Writing letters of recommendation for students is a fundamental part of my job a
 The assessment system for this course is closely modeled on [Peter-Michael Osera](https://osera.cs.grinnell.edu/)'s offering of [CSC 208-01: Discrete Mathematics](https://osera.cs.grinnell.edu/csc208/) at Grinnell College.
 
 I learned of many of the videos and readings used in this course from [Chad Topaz](https://chadtopaz.com/)'s offering of [MATH-200: Discrete Mathematics](https://glow.williams.edu/courses/3011771) at Williams College.
+
+My approach to Bloom's taxonomy and assignments/class time is inspired by [this blog post](https://rtalbert.org/re-thinking-blooms-taxonomy-for-flipped-learning-design/) by Robert Talbert. 
+
+Many learning targets are adapted from Robert Talbert's targets from [an offering](https://hackmd.io/@rtalbert235/BkwQboPzY) of MTH 225: Discrete Mathematics at Grand Valley State University. 
