--- a/content/modules/logic-2/prep.qmd
+++ b/content/modules/logic-2/prep.qmd
@@ -17,7 +17,7 @@ title: "Implication, Inverse, Converse, and Contrapositive"
 
 # Reading (40 mins)
 
-- [BOP 2.3-2.6](https://www.people.vcu.edu/~rhammack/BookOfProof/Main.pdf)
+- [BOP 2.3-2.6](https://www.people.vcu.edu/~rhammack/BookOfProof/Main.pdf#page=54)
 - [Privilege is the Inverse of Discrimination](https://medium.com/@davestagner/privilege-is-the-inverse-of-discrimination-334d0c7f4fbd) (***Note**: I think this is a helpful piece, but be aware that it uses problematically simple binaries in race and gender.*)
  
 ## Optional Reading
