--- a/pages/learning-targets.qmd
+++ b/pages/learning-targets.qmd
@@ -1,8 +1,37 @@
+---
+title: Learning Targets
+---
 
-# Logic and Sets
+[Targets **LS1-3** are introduced on Quiz 1. Targets **PF1**, **PF2**, and **FR1** are introduced on Quiz 2. Targets **CR1-3** are introduced on Quiz 3. Targets **G1**, **P1**, and **P2** are introduced on Quiz 4.]{.aside}
 
-# Proof and Counting
+**Logic and Sets **
 
-# Recursion and Asymptotics
+- **LS1**: I can simplify and evaluate logical expressions that include quantifiers and boolean operations. 
+- **LS2**: I can represent sets in set-builder notation; determine whether an object is an element of a set; and prove that one set is equal to or a subset of another. 
+- **LS3**: I can perform operations on sets (intersection, union, complement, difference, Cartesian product) and determine the cardinality of a set. 
 
-# Graphs and Probability
+**Proofs **
+
+- **PF1**: I can use proof-by-contradiction to prove mathematical statements. 
+- **PF2**: I can choose between weak and strong induction and write correct inductive proofs that include both a base case and an inductive step. 
+
+**Functions and Relations**
+
+- **FR1**: I can determine whether or not a given relation is an equivalence relation. 
+
+**Counting and Recursion**
+
+- **CR1**: I can use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
+- **CR2**: I can use permutations and combinations to count the number of candidate solutions to a given problem. 
+- **CR3**: I can prove that a recurrence relation describes a simple algorithm's runtime and use this relation to determine the big-oh asymptotic runtime. 
+
+**Graphs**
+
+- **G1**: I can write correct proofs of simple mathematical propositions about the structure of graphs. 
+
+**Probability**
+
+- **P1**: I can evaluate marginal, joint, and conditional probabilities of events on discrete sample spaces. 
+- **P2**: I can evaluate expectations and conditional expectations of random variables on discrete sample spaces. 
+
+
