--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -9,13 +9,21 @@ callout-icon: false
 Welcome to CSCI 0200: Math Foundations of Computing! In this course, we'll study **how to think about computation using mathematics**. Historically, computer science emerged as a subfield of mathematics before "growing up" into its own discipline. Math remains one of the fundamental tools we use to solve advanced problems. You might know to expect mathematical reasoning in core theory courses like Theory of Computation (CSCI 0301) and Algorithms and Complexity (CSCI 0302), but you'll also draw on mathematical thinking in courses like Artificial Intelligence (CSCI 0311), Programming Languages (CSCI 0313), and Machine Learning (CSCI 0451). 
 
 
-This course has four main **learning objectives**: 
+### Core Learning Objectives
 
 1. You will solve problems using logic, set theory, recurrence relations, combinatorics (counting), graphs, and discrete probability. 
 2. You will apply the above topics to complex problems in computer science and beyond. 
 3. You will write mathematical proofs that allow you to be *certain* of a mathematical fact or a statement about an algorithm. 
 4. You will perform computational experiments and contextualize your findings against known mathematical concepts and facts. 
 4. You will develop habits of reflection, collaboration, and persistence for learning theoretical topics. 
+
+### Tentative Sequence of Topics
+
+**Weeks 1-3**: Course introduction, logic, sets <br> 
+**Weeks 4-6**: Proof techniques, functions, relations <br>
+**Weeks 7-9**: Counting, recursion <br> 
+**Weeks 10-13**: Graphs, probability
+
 
 # Logistics and Key Highlights
 
@@ -62,15 +70,60 @@ This course has four main **learning objectives**:
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/></svg>
                     </td>
                     <td>
+                        Student Hours (usually in the lounge outside 75 SHS 224)
+                        <ul style="margin-bottom:0;">
+                            <li> Mondays, 2pm-4pm </li>
+                            <li> Wednesdays, 11am-12pm </li>
+                            <li> Thursdays, 3pm-4pm </li>
+                        </ul>
+                    </td>
+                </tr>   
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td class="syllabus-description-table-header"> 
+            <b>Assistant In Instruction (ASI)</b> 
+        </td> 
+        <td class="syllabus-description-table-entry"> 
+            Smith Gakuya
+            <table style="margin-bottom:0;"> 
+                <tr> 
+                    <td>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16"><path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/></svg>
+                    </td>
+                    <td>
+                        75 Shannon Street, Room 221 
+                    </td>
+                </tr>
+                <tr> 
+                    <td>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16"><path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
+                    </td>
+                    <td>
+                        [sgakuya@middlebury.edu](mailto:sgakuya@middlebury.edu)
+                    </td>
+                </tr>
+                <tr> 
+                    <td>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/></svg>
+                    </td>
+                    <td>
                         Student Hours 
                         <ul style="margin-bottom:0;">
-                            <li> TBD </li>
-                            <li> TBD </li>
                             <li> TBD </li>
                         </ul>
                     </td>
                 </tr>   
             </table>
+        </td>
+    </tr>
+    <tr>
+        <td class="syllabus-description-table-header"> 
+            <b>Course Assistants</b> 
+        </td> 
+        <td class="syllabus-description-table-entry"> 
+            TBD
         </td>
     </tr>
     <tr>
@@ -80,7 +133,7 @@ This course has four main **learning objectives**:
         <td class="syllabus-description-table-entry">
             I encourage you to call me "Phil" or "Prof. Phil." "Professor Chodrow" is also fine if that's what's most comfortable for you. 
             <br> <br> 
-            This is a **flipped class**. It is very important for you to budget time to watch videos, complete readings, and solve warmup problems *prior* to scheduled class periods. 
+            This is a **flipped class**. This means that we'll introduce new content with videos, readings, and warmup problems **ahead of class time**. During class time, we'll discuss questions, work complex examples, and try some practice problems. It's very important for you to budget 1.5-2 hours for prep **before** each class. 
             <br> <br> 
             This class uses **standards-based-grading**. You don't have an "average" in this class, just [a series of checkboxes](#your-final-grade) you can tick off as you complete and receive feedback on assignments. The boxes you tick off determine your final grade. 
             <br> <br>
@@ -97,7 +150,9 @@ This course has four main **learning objectives**:
     </tr> 
 </table>
 
+
 # Class Format
+
 
 ## Flipped Class
 
@@ -118,7 +173,11 @@ The overall format of CSCI 0200 is designed to help you apply the ideas and skil
 
 Warmups are here to help you <span style="color:#7030a0">**remember**</span> and <span style="color:#0070c0">**understand**</span> new material. Each day, you'll prepare for class by watching videos, completing readings, and solving a small number of relatively short warmup problems. You'll then submit your solutions on Gradescope. You'll get feedback on your solutions from our graders. Your warmup solutions are expected to show effort but are not graded for correctness. 
 
+::: {.callout-tip}
+
 Warmups are due by 8:30am on the day of class. Warmups are never accepted late and there are no extensions. However, [you can miss up to three warmups](#assessment-of-warmups) without any impact on your grade. 
+
+:::
 
 ### Class on Mondays and Wednesdays: Questions, Activities, and Discussion
 
@@ -130,12 +189,11 @@ By the time you've completed the warmups and made it to class, I'm expecting tha
 
 [![](assets/img/figs/blooms-taxonomy-quizzes.png)]{.aside}
 
-On quizzes, you'll demonstrate your ability to <span style="color:#7030a0">**remember**</span>, <span style="color:#0070c0">**understand**</span>, and <span style="color:#00b050">**apply**</span> key ideas and skills. We'll have four quizzes throughout the semester. On each quiz, there will be one question related to each of [the twelve learning targets](#learning-targets) that we have introduced in the course so far. So, our first quiz will have three questions, our second quiz will have 6 questions, our third quiz will have 9 questions, and our last quiz will have twelve. You should plan to attempt 2-3 problems on each quiz. 
+On quizzes, you'll demonstrate your ability to <span style="color:#7030a0">**remember**</span>, <span style="color:#0070c0">**understand**</span>, and <span style="color:#00b050">**apply**</span> key ideas and skills. We'll have four quizzes throughout the semester. On each quiz, there will be one question related to each of [the twelve learning targets](pages/learning-targets.qmd) that we have introduced in the course so far. We'll introduce 3 new learning targest in time for each quiz. So, our first quiz will have 3 questions, our second quiz will have 6 questions, our third quiz will have 9 questions, and our last quiz will have 12 questions. You should plan to attempt 2-3 problems on each quiz. 
  
-Once you have earned *Satisfactory* on a learning target, **you do not need to attempt that target again.** You're done with that one! On the next quiz, you should attempt a different learning target.
-
-Our final exam will include one question for every learning target in the course, similarly to the last. This gives you a chance to earn *Satisfactory* on learning targets for anything you might not yet have gotten by the final quiz.    
-
+::: {.callout-tip}
+Our final exam will be similar to the final quiz, including one question for all 12 learning targets in the course. The only difference is that you'll have 3 hours instead of 50 minutes.  
+:::
 
 ### Labs
 
@@ -149,7 +207,7 @@ You'll start on lab assignments in groups in class on Fridays. You'll complete t
 You may continue to work on your report with classmates, but your report should be written by you and reflect your own understanding of the material. 
 A good heuristic: **discussion** and **work at the whiteboard** is great to share, but typed solutions or code should not be shared.   
 
-Labs are graded on a [4-point rubric](#labs). After receiving your grade on your lab report, you may revise and resubmit your report for a higher grade.  
+Labs are assessed on a [4-point rubric](#labs). After receiving your assessment on your lab report, you may revise and resubmit your report for a higher assessment.  
 
 
 
@@ -157,55 +215,20 @@ Labs are graded on a [4-point rubric](#labs). After receiving your grade on your
 
 ## Warmups
 
-**Warmups are not graded for correctness**. The two grades you can receive are "**Complete**" or "**Incomplete/Missing**." A grade of **Complete** means that you made good effort on the problems and that your attempt demonstrates at least partial understanding of the reading and videos. Most days, 1.5-2 hours of prep time will usually be sufficient for you to complete the readings, videos, and warmups. 
+**Warmups are not graded for correctness**. The two grades you can receive are "**Complete**" or "**Incomplete/Missing**." A grade of **Complete** means that you made good effort on the problems and that your attempt demonstrates at least partial understanding of the reading and videos. Most days, 1.5-2 hours of prep time will usually be sufficient for you to complete the readings, videos, and warmups. [Yes, I know, this is a lot of prep. On the other hand, the lab reports are your only homework assignments.]{.aside}
 
 ## Quizzes
 
 Quiz problems are assessed as **Satisfactory (S)** or **Incomplete/Not Yet Satisfactory (NS)**. To earn an **S** on a quiz problem, you must complete the entire problem correctly, modulo [minor errors](pages/minor-errors.qmd) unrelated to the learning goals of the course (like arithmetic typos). 
 
-Once you have earned an **S** on a quiz problem, you have completed the corresponding Learning Target. You never need to attempt another quiz problem corresponding to that target. So, if you successfully complete an **LS2** problem on Quiz 1, you should *not* try an **LS2** problem on Quiz 2. 
+**There is no partial credit given on quiz problems**. Solutions with minor errors that are otherwise demonstrate learning earn an **S**, while solutions that demonstrate important misunderstandings (or are not attempted) earn an **NS**. 
 
-
-### Learning Targets {#learning-targets}
-
-[Targets **LS1-3** are introduced on Quiz 1. Targets **PF1**, **PF2**, and **FR1** are introduced on Quiz 2. Targets **CR1-3** are introduced on Quiz 3. Targets **G1**, **P1**, and **P2** are introduced on Quiz 4.]{.aside}
-
-**Logic and Sets **
-
-- **LS1**: I can simplify and evaluate logical expressions that include quantifiers and boolean operations. 
-- **LS2**: I can represent sets in set-builder notation; determine whether an object is an element of a set; and prove that one set is equal to or a subset of another. 
-- **LS3**: I can perform operations on sets (intersection, union, complement, difference, Cartesian product) and determine the cardinality of a set. 
-
-**Proofs **
-
-- **PF1**: I can use proof-by-contradiction to prove mathematical statements. 
-- **PF2**: I can choose between weak and strong induction and write correct inductive proofs that include both a base case and an inductive step. 
-
-**Functions and Relations**
-
-- **FR1**: I can determine whether or not a given relation is an equivalence relation. 
-
-**Counting and Recursion**
-
-- **CR1**: I can use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
-- **CR2**: I can use permutations and combinations to count the number of candidate solutions to a given problem. 
-- **CR3**: I can prove that a recurrence relation describes a simple algorithm's runtime and use this relation to determine the big-oh asymptotic runtime. 
-
-**Graphs**
-
-- **G1**: I can write correct proofs of simple mathematical propositions about the structure of graphs. 
-
-**Probability**
-
-- **P1**: I can evaluate marginal, joint, and conditional probabilities of events on discrete sample spaces. 
-- **P2**: I can evaluate expectations and conditional expectations of random variables on discrete sample spaces. 
-
-
+Once you have earned an **S** on a quiz problem, you have completed the corresponding Learning Target. You never need to attempt another quiz problem corresponding to that target. So, if you earn an **S** on an **LS2** problem on Quiz 1, you should *not* try an **LS2** problem on Quiz 2. So, even though you are going to have a total of 3 + 6 + 9 + 12 + 12 = 42 problems placed in front of you on quizzes and the final exam, you only need to satisfactorily complete a total of 12 problems on the quizzes and final exam. [Actually, just 11 satisfactory problems are [sufficient](#your-final-grade) to qualify for an A.]{.aside}
 
 
 ## Labs
 
-Labs are graded on a 4-part rubric similar to the EMRF rubric of [Stutzman and Race](http://miss-serwy.weebly.com/uploads/1/2/1/6/12161802/emrf_rubric_1.pdf):[This particular scale is very close to the scale [used by Peter-Michael Osera](https://osera.cs.grinnell.edu/csc208/syllabus/#projects) at Grinnell College.]{.aside} 
+Labs are assessed on a 4-part rubric similar to the EMRF rubric of [Stutzman and Race](http://miss-serwy.weebly.com/uploads/1/2/1/6/12161802/emrf_rubric_1.pdf):[This particular scale is very close to the scale [used by Peter-Michael Osera](https://osera.cs.grinnell.edu/csc208/syllabus/#projects) at Grinnell College.]{.aside} 
 
 **Excellent** (**E**): 
 
@@ -233,87 +256,30 @@ Labs are graded on a 4-part rubric similar to the EMRF rubric of [Stutzman and R
 
 ## Your Final Grade
 
-+-----+---------------------------------+-----------------------+
-|Tier | Learning Targets<br>(Out of 12) | Labs (out of 8)       |
-+:====+=================================+=======================+
-|**A**|   At least 11                   | - No **N**s or **R**s |
-|     |                                 | - At least 4 **E**s   |
-|     |                                 | - Remainder **M**s    |
-+-----+---------------------------------+-----------------------+
-|**B**|   At least 8                    | - No **N**s or **R**s |
-|     |                                 | - At least 2 **E**s   |
-|     |                                 | - Remainder **M**s    |
-+-----+---------------------------------+-----------------------+
-|**C**|   At least 6                    | - No **N**s           |
-|     |                                 | - At least 6 **M**s   |
-|     |                                 | - Remainder **R**s    |
-+-----+---------------------------------+-----------------------+
+Your final grade in the course will be determined by the bundle of Learning Targets and Lab assessments you achieve by the end of the course, according to the following table. To earn the given grade, you need to meet all requirements for **both** Learning Targets and Labs. 
+[Here's [a version of this table with checkboxes](pages/checkbox-table.qmd) that you can use to track your progress in the course.]{.aside} 
 
-### Calculating Your Grade
++-----+---------------------------------+---------------------------------+
+|Tier | Learning Targets<br>(out of 12) | Labs (out of 8)                 |
++:====+=================================+=================================+
+|**A**|   At least 11                   | - No **N**s or **R**s           |
+|     |                                 | - At least 4 **E**s             |
+|     |                                 | - Remainder **M**s              |
++-----+---------------------------------+---------------------------------+
+|**B**|   At least 8                    | - No **N**s or **R**s           |
+|     |                                 | - At least 2 **E**s             |
+|     |                                 | - Remainder **M**s              |
++-----+---------------------------------+---------------------------------+
+|**C**|   At least 6                    | - No **N**s                     |
+|     |                                 | - At least 6 **M**s or **E**s   |
+|     |                                 | - Remainder **R**s              |
++-----+---------------------------------+---------------------------------+
 
-You can use the table below to estimate where you stand in the class based on the assignments you've submitted and the feedback you've received. [This table doesn't take into account [penalties for missing warmups](#assessment-of-warmups).]{.aside}
+I reserve the right to modify this table, but I promise that I will not make it more difficult to achieve a given grade tier.
 
-**Instructions**: 
+#### Partial Completion
 
-- Check off **Learning Targets** as you go, starting from the bottom. For example, once you've checked off 6 learning targets you have filled the "C" row, and once you've checked off 8 learning targets you have filled the "B" row. 
-- Check off **Labs** as you get receive feedback. When you receive an assessmment on a lab, you can check off that lab **up to once in each grade tier**. For example, if you receive an **S**, you can check off one box for "S or E" in each of Tiers A, B, and C. If you receive an **E**, you can check off one box for **E** in Tiers A and B, and one box for **S or E** in Tier C. **R**'s can only be used to check off boxes in the second row of Tier C. 
-
-Once *all* boxes in a row are checked, you have earned that grade in the course, *provided* that you have missed no more than 3 warmup activities.  
-
-
-+-----+---------------------------------+-------------------------------+
-|Tier | Learning Targets                | Labs                          |
-+:====+=================================+===============================+
-|**A**|   &#9634; &#9634; &#9634;       | **E**: &#9634; &#9634;        |
-|     |                                 |  &#9634; &#9634;<br>          |
-|     |                                 | **M or E**: &#9634; &#9634;   |
-|     |                                 | &#9634; &#9634;               |
-|     |                                 |                               |
-+-----+---------------------------------+-------------------------------+
-|**B**|   &#9634; &#9634;               | **E**: &#9634; &#9634;<br>    |
-|     |                                 | **M or E**: &#9634; &#9634;   |
-|     |                                 | &#9634; &#9634; &#9634;       |
-|     |                                 | &#9634;                       |
-+-----+---------------------------------+-------------------------------+
-|**C**|   &#9634; &#9634; &#9634;       | **M or E**: &#9634; &#9634;   |
-|     |   &#9634; &#9634; &#9634;       | &#9634; &#9634; &#9634;       |
-|     |                                 | &#9634;     <br>              |
-|     |                                 | **R, M, or E**: &#9634;       |
-|     |                                 | &#9634;                       |
-+-----+---------------------------------+-------------------------------+
-
-::: {.aside}
-
-Here's an example for a student who completed 9 learning targets, earning "Exemplary" on 5 labs and "Meets Expectations" on 3. 
-
-+-----+---------------------------------+-------------------------------+
-|Tier | Learning Targets                | Labs                          |
-+:====+=================================+===============================+
-|**A**|   &#9634; &#9634; &#9745;       | **E**: &#9745; &#9745;        |
-|     |                                 |  &#9745; &#9745;<br>          |
-|     |                                 | **M or E**: &#9745; &#9745;   |
-|     |                                 | &#9745; &#9745;               |
-|     |                                 |                               |
-+-----+---------------------------------+-------------------------------+
-|**B**|   &#9745; &#9745;               | **E**: &#9745; &#9745;<br>    |
-|     |                                 | **M or E**: &#9745; &#9745;   |
-|     |                                 | &#9745; &#9745; &#9745;       |
-|     |                                 | &#9745;                       |
-+-----+---------------------------------+-------------------------------+
-|**C**|   &#9745; &#9745; &#9745;       | **M or E**: &#9745; &#9745;   |
-|     |   &#9745; &#9745; &#9745;       | &#9745; &#9745; &#9745;       |
-|     |                                 | &#9745;     <br>              |
-|     |                                 | **R, M, or E**: &#9745;       |
-|     |                                 | &#9745;                       |
-+-----+---------------------------------+-------------------------------+
-
-This student fully meets the requirements of a **B** and partially meets the requirements of an **A**, and therefore earns an **A-** (provided they have missed no more than 3 warmups). 
-
-:::
-
-#### Plus/minus grades
-
-You earn a +/- modifier on a grade by fully meeting the requirements for one tier and partially meeting the requirements for the next tier. For example, you may completely meet the requirements of a **B** on Learning Targets and completely meet the requirements of an **A** on labs. In this case, you earn a minus grade for the higher tier: i.e. an A- if you are between a B and an A. 
+When you completely meet both requirements for one tier and completely meet one requirement for a higher tier, you earn the "-" version of the higher tier grade. For example, you may completely meet the requirements of a **B** on Learning Targets and completely meet the requirements of an **A** on Labs. In this case, you earn a minus grade for the higher tier: an **A-**. 
 
 ::: {.callout-tip}
 
@@ -323,7 +289,7 @@ If you fully meet the requirements for the **C** tier and meet the requirements 
 
 #### Assessment of Warmups
 
-You can miss **at most three** warmups without penalty. After the first three missing warmups, your grade will lower by **1/3 of a letter grade for every two missing warmups**. For example, an **A** would become an **A-**, a **B-** would become a **C+**, etc. 
+You can miss **at most three** warmups without penalty. After the first three missing warmups, your grade will lower by **1/3 of a letter grade for every two missing warmups**. For example, an **A** would become an **A-**, a **B+** would become a **B**, a **B-** would become a **C+**, etc. 
 
 ::: {.aside}
 
@@ -368,19 +334,19 @@ While LLMs may have many benefits, they are also the subject of [routine]((https
 ### In This Class
 
 - Work that you submit in this class must demonstrate **your** learning and understanding. Copy/paste from LLMs like ChatGPT does not do this, and is consequently a violation of academic integrity. 
-- You are **discouraged** from using ChatGPT in any way on warmups. The reason is that warmups help you with the quizzes; if you don't practice on the warmups, you'll do worse and get a lower grade. 
+- You are **discouraged** from using ChatGPT in any way on warmups. The reason is that warmups help you prepare for the quizzes; if you don't practice on the warmups, you'll do worse and get a lower grade. 
 - Quizzes are in-class assessments on which electronics are prohibited. This implies that ChatGPT is **prohibited** on quizzes. 
 - You are free to **consult** ChatGPT (or other LLMs) when studying and when completing lab reports. If you do, **you must treat ChatGPT as an unverified source**. This means: 
     - You must cite your source. 
     - You must describe the contribution of the source to your submitted writeup. 
     - You may paraphrase but may not quote ChatGPT. 
-    - **You must describe what steps you have taken to check that your findings from ChatGPT are indeed correct**.
+    - **You must describe what steps you have taken to check that your learning involving ChatGPT is indeed correct**.
 - You are always personally responsible for the accuracy, quality, and integrity of your work.  
 
 
 # Inclusion, Access, and Participation
 
-I commit to an inclusive, accessible, participatory, and safe vision of CSCI 0200. 
+I commit to an inclusive, accessible, participatory, and safe classroom for CSCI 0200. 
 
 ## Disabilities and Clearing Barriers
 
