--- a/index.qmd
+++ b/index.qmd
@@ -11,4 +11,45 @@ Welcome to CSCI 0200: Math Foundations of Computer Science! In this course, we'l
 - How do we *know* that a certain algorithm works? How do we *know* how fast it is? 
 - What role do uncertainty and randomness play in computation? 
 
- 
+```{mermaid}
+mindmap
+  root((CSCI 0200))
+    )**Module 1**(
+        (Logic)
+          (Propositional logic)
+            (Boolean algebra)
+            (Circuit design)
+        (Sets)
+            (Set Operations)
+            (Logical quantifiers)
+    )**Module 2**(
+        (Relations)
+            (Functions)
+            (Equivalence Relations)
+        (Proof Techniques)
+            (Direct)
+            (Indirect)
+            (Contradiction)
+            (Induction)
+                (Weak)
+                (Strong)
+    )**Module 3**(
+        (Counting)
+            (Sum and product principles)
+            (Permutations and combinations)
+            (Combinatorial proofs)
+        (Recurrence Relations)
+            (Asymptotics)
+            (Divide and combine)
+    )**Module 4**(
+        (Probability)
+            (Distributions)
+                (Conditioning)
+            (Random variables)
+                (Expectation)
+        (Graphs)
+            (Special graphs)
+                (Trees )
+                (Cycles)
+            (Algorithms)
+```
